# farm_maneger

./: README.md  backup routes
AGROLINK 2/: package-lock.json  package.json
AGROLINK_2/CoolAdmin-master/: form.html  index.html  register.html
AgroLink/: .gitignore  README.md  index.html  main.py
AgroLink/app/: __init__.py  forms.py  models.py  routes.py
AgroLink/static/: login.html
FLASK_CLEAN/: app.py  black_list.py  main.py
FLASK_CLEAN/APIs/: api.py  cities.py  (+3 more)
Farm manager/: .env  README.md  app.py  check_area_table.py  check_columns.py  check_columns_all.py  create_tables.py  create_user.py  criar_admin.py  fix_column_types.py  fix_database_issues.py  main.py  migrate_db.py  requirements.txt  update_analysis_table.py  update_area_table.py  update_db.py
eder/flask 2/AgroLink/: .dockerignore  .env-example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  blacklist.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
eder/flask 2/AgroLink/app/: __init__.py  conta_solo.py  forms.py  models.py  recursos.py  routes.py
eder/flask 2/AgroLink/app/views/:  cad_solo.html  alterar_safra.html  alterar_solo.html  atualiza_conta.html  atualiza_user.html  base_login.html  base_sistema.html  cad_safra.html  cad_solo.html  cad_user.html  index.html  inicio.html  resumo.html  safra.html  solo.html
eder/flask 2/AgroLink/migrations/versions/: 63cd43d83ec6_configuração_inicial.py
farm_management/: Consumir_api.ipynb  app.py  automation.py  drones.py  sensors.py  weather.py
(+162 files in other folders)
